evaluation/test_suite/positive/ub18/2.c
#include <stdio.h>

int main()
{
    int* p = NULL;
    printf("%d\n", *p);
}
