evaluation/test_suite/negative/ub62/1.c
#include <stdio.h>

int main()
{
    volatile int x = 1;
    volatile int* p = &x;
    printf("%d\n", *p);
}
